<resources>
    <string name="app_name">MyResto</string>
    <string name="icon_map">Map View</string>
    <string name="icon_list">List View</string>
    <string name="icon_employees">Workmates</string>
    <string name="signFacevook">Sign in with Facebook</string>
    <string name="enteremail">Enter Email</string>
    <string name="apikey">MyRest</string>
    <string name="a">My</string>
    <string name="signGmail">Sign in with Gmail</string>
    <string name="enterpassword">Enter Password</string>
    <string name="login">Login</string>
    <string name="resetpassword">Rest Password</string>
    <string name="sign_in">Sign in</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>
    <string name="go_for_lunch">GO4Lunch</string>
    <string name="address_text">"Name: %1$s \n Address: %2$s \n Timestamp: %3$tr"</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>