<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    tools:context="view.ui.ImputLoginActivity">




    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="404dp"
        android:layout_height="171dp"
        android:contentDescription="@string/a"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo" />

    <ImageView
        android:id="@+id/image_avatar"
        android:layout_width="70dp"
        android:layout_height="54dp"
        android:layout_marginStart="71dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="271dp"
        android:layout_height="46dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="69dp"
        android:contentDescription="@string/a"
        android:gravity="center"
        android:text="@string/go_for_lunch"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textviname"
        android:layout_width="155dp"
        android:layout_height="22dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="87dp"
        android:contentDescription="@string/a"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_avatar"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textViewemail"
        android:layout_width="216dp"
        android:layout_height="24dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/a"
        android:gravity="center"
        android:text="@string/enteremail"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_avatar" />
    </androidx.constraintlayout.widget.ConstraintLayout>


