<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="view.Authentication">

    <ImageView
        android:id="@+id/photoentreprise"
        android:layout_width="427dp"
        android:layout_height="721dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/a"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="ImageContrastCheck"
        tools:src="@drawable/photo" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="411dp"
        android:layout_height="408dp"
        android:layout_marginStart="13dp"
        android:contentDescription="@string/a"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/photoentreprise"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/signwithgmail"
        android:layout_width="321dp"
        android:layout_height="59dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="589dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="83dp"
        android:backgroundTint="#F13737"
        android:contentDescription="@string/a"
        android:drawableLeft="@drawable/ic_rabit"
        android:text="@string/signGmail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/signwithfacbook"
        android:layout_width="338dp"
        android:layout_height="67dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="435dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="229dp"
        android:backgroundTint="#2C44CA"
        android:contentDescription="@string/a"
        android:drawableLeft="@drawable/ic_baseline_kayaking_24"
        android:text="@string/signFacevook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>